# open-evolutions

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  lake-manifest.json  lakefile.lean  pyproject.toml
.github/workflows/: proof-of-metric.yml  synthesizer.yml
challenges/RZCS/: README.md
core/: execution.py  metrics.py  prepare.py  task_definition.md
docs/: Open_Evolutions_ Inaugural_Challenge.md  Open_Evolutions_System_Design.md  agent_configuration.md  implementation_plan.md
knowledge/: evolution.md  learnings.json
lineages/analytic-continuation/: Main.lean  lineage_learnings.json
lineages/computational-bounds/: Main.lean  lineage_learnings.json
lineages/operator-theory/: Main.lean  lineage_learnings.json
lineages/shared/: RiemannZeta.lean
lineages/shared/RiemannZeta/: Basic.lean
oe_cli/: evolve.py  main.py  status.py  submit.py
synthesizer/: distiller.py  hybridizer.py  knowledge_manager.py  novelty.py  pruner.py  run.py
